--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,16 @@
 aiogram==2.25.1
 aiohttp==3.8.5
 aiosignal==1.3.1
-anyio==3.7.1
 async-timeout==4.0.3
 asyncpg==0.28.0
-asyncpgsa==0.27.1
 attrs==23.1.0
 Babel==2.9.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
-ecdsa==0.13.3
-exceptiongroup==1.1.2
-h11==0.14.0
-httpcore==0.17.3
-httpx==0.24.1
+frozenlist==1.4.0
 idna==3.4
 magic-filter==1.0.11
-monobank==0.4.4
 multidict==6.0.4
-pep8==1.7.1
-psycopg2==2.9.7
 python-dotenv==1.0.0
-python-telegram-bot==20.4
 pytz==2023.3
-requests==2.31.0
-sniffio==1.3.0
-SQLAlchemy==2.0.19
-typing_extensions==4.7.1
-urllib3==2.0.4
 yarl==1.9.2
