--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
-aiogram
-aiohttp
-aiosignal
-async-timeout
-asyncpg
-attrs
-Babel
-certifi
-charset-normalizer
-frozenlist
-idna
-magic-filter
-multidict
-python-dotenv
-pytz
-yarl
+aiogram==2.25.1
+aiohttp==3.8.5
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.1.0
+Babel==2.9.1
+beautifulsoup4==4.12.2
+bs4==0.0.1
+certifi==2023.7.22
+charset-normalizer==3.2.0
+frozenlist==1.4.0
+idna==3.4
+lottie==0.7.0
+magic-filter==1.0.11
+multidict==6.0.4
+Pillow==10.0.0
+python-dotenv==1.0.0
+pytz==2023.3
+soupsieve==2.4.1
+svgwrite==1.4.3
+yarl==1.9.2
